@startuml
    abstract class User {
        - first_name : string
        - last_name : string
        - email : string
        - password : string
        - is_baned : bool
        - is_blacklisted : bool
        - suspend_until : DateTime
        - tileouted_until : DateTime
        - last_login : DateTime
        - created_at : DateTime
    }

    enum UserRole{
        ADMIN,
        AUTHOR,
        READER
    }

    class Reader {
        - role : UserRole
    }

    class Author {
        - role : UserRole
    }

    class Admin {
        - role : UserRole
    }


    class Article {
        - title : string
        - content : text
        - cover : string
        - created_at: DateTime
        - likes_count : int
        - comments_count : int
    }


    class Comment {
        - body : text
        - created_at : DateTime
    }

    class Like {
        - created_at : DateTime
        - likes_count : int
    }

    class Category {
        - name : string
        - description: text
        - articles_count : int
    }

    class Report {
        - message: ReportReason
        - created_at: Date
    }

    enum ReportReason{
        SPAM,
        EXPLICIT_CONTENT,
        INSULT,
        RACIST_CONTENT,
        OFFENSIVE,
        ABUSE,
        COPYRIGHT,
        OTHER
    }

    User <|--- Reader
    User <|--- Admin
    User <|--- Author

    Reader -- UserRole
    Admin -- UserRole
    Author -- UserRole


    Article "0..*" -- "1..1" Author : belongs to >
    Article "0..*" -- "*..*" Category : belongs to many >
    (Article, Category) .. ArticleCategory
    Comment "0..*" -- "1..1" Reader : belongs to >
    Comment "0..*" -- "1..1" Article : has <
    Report -- ReportReason
    Reader "1" --> "0..*" Like : creates
    Like "0..*" --> "1" Article : targets (if article_id not null)
    Like "0..*" --> "1" Comment : targets (if comment_id not null)
    Reader "1" --> "0..*" Report : creates
    Report "0..*" --> "1" Article : targets (if article_id not null)
    Report "0..*" --> "1" Comment : targets (if comment_id not null)


@endumlb